fix(css): add background color to horizontal gutter for visibility

--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,7 @@ button:hover {
 }
 
 .gutter.gutter-horizontal {
+  background-color: #ffffff30;
   background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==');
   cursor: col-resize;
   width: 15px !important;
